# the-devils-ai-dictionary

./: .dev.vars.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCALIZATION_TODO.md  README.md  TODO.md  app-version.json  capacitor.config.ts  cloudflare-env.d.ts  cloudflare-worker.mjs  eslint.config.mjs  next.config.ts  open-next.config.ts  package-lock.json  package.json  todo.md  tsconfig.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
android/: .gitignore  build.gradle  gradle.properties  keystore.properties.example  variables.gradle
android/app/src/main/jni/: CMakeLists.txt  swift_bridge_jni.c
docs/: apple-web-signin-runbook.md  commit-message-style.md  content-authoring.md  ios-testflight.md  reference-expansion-backlog.json  release-versioning.md  repo-history.md
migrations/: 0001_push_installations.sql  0002_push_installation_delivery_preferences.sql  0003_auth_and_saved_words.sql  0004_push_delivery_idempotency.sql
native/: README.md
public/: _headers  web-push-sw.js
scripts/: apns-local-send.sh  build-content-artifacts.sh  build-mobile-export.mjs  build-swift-android.sh  build-windows.mjs  cloudflare-release-gate.mjs  configure-apple-platform-project.rb  configure-ios-watch-project.mjs  daily-term-automation.mjs  fix-android-assets.mjs  generate-apple-assets.mjs  generate-content-index-fallback.rb  generate-content-index.mjs  generate-ios-assets.mjs  generate-missing-reference-entries.mjs  generate-og-images.mjs  ios-local-device.mjs  ios-ui-smoke-matrix.mjs  (+11 more)
(+1423 files in other folders)
